--- a/PietroPrandini_FondamentiElettronica_FirstExercise.tex
+++ b/PietroPrandini_FondamentiElettronica_FirstExercise.tex
@@ -3,16 +3,17 @@
 \usepackage{amsfonts}
 \usepackage{amssymb}
 \usepackage[english]{babel}
-\usepackage{graphicx}
 \usepackage[left=2cm,right=2cm,top=2cm,bottom=2cm]{geometry}
+\usepackage{graphicx}
 \usepackage{hyperref} % Used for external links
 \usepackage[utf8]{inputenc}
 \usepackage{listings} % Used for source code listing
+
 % Source code listing's parameters
 \lstset{
   frame=single,
   keepspaces=true,
-  %title=\lstname
+%  title=\lstname
 }
 
 \title{First Exercise\\{\small{Fundamentals Of Electronics - a.a. 2018-2019 - University of Padua (Italy)}}}
@@ -21,8 +22,12 @@
 \begin{document}
 \maketitle
 \section{Audio amplifier}
-\subsection{Netlist}
-\lstinputlisting{netlist/PietroPrandini_FE_18-19_1.cir}
+\subsection{Voltage gain and frequency domain}
+\subsubsection{Netlist}
+\lstinputlisting{netlist/PietroPrandini_FE_18-19_1.1.cir}
+
+%\subsubsection{Netlist}
+%\lstinputlisting{netlist/PietroPrandini_FE_18-19_1.cir}
 
 % License
 \vspace*{\fill}
