--- a/PietroPrandini_FondamentiElettronica_FirstExercise.tex
+++ b/PietroPrandini_FondamentiElettronica_FirstExercise.tex
@@ -16,15 +16,17 @@
 %  title=\lstname
 }
 
-\title{First Exercise\\{\small{Fundamentals Of Electronics - a.a. 2018-2019 - University of Padua (Italy)}}}
+\title{First Exercise\\{\small{Fundamentals Of Electronics - a.a. 2018-2019 -
+University of Padua (Italy)}}}
 \author{Pietro Prandini (mat. 1097752)}
 
 \begin{document}
 \maketitle
 \section{Audio amplifier}
-\subsection{Voltage gain and frequency domain}
+\subsection{Voltage gain and frequency domain - Ideal op. amp.}
+\includegraphics[width=8cm]{schematics/1d1.jpg}
 \subsubsection{Netlist}
-\lstinputlisting{netlist/PietroPrandini_FE_18-19_1.1.cir}
+\lstinputlisting{netlist/1d1.cir}
 
 %\subsubsection{Netlist}
 %\lstinputlisting{netlist/PietroPrandini_FE_18-19_1.cir}
@@ -32,6 +34,10 @@
 % License
 \vspace*{\fill}
 \centering
-\tiny{This work is licensed under the Creative Commons Attribution-ShareAlike 4.0 International License. To view a copy of this license, visit \href{http://creativecommons.org/licenses/by-sa/4.0/}{http://creativecommons.org/licenses/by-sa/4.0/} or send a letter to Creative Commons, PO Box 1866, Mountain View, CA 94042, USA.}
+\tiny{This work is licensed under the Creative Commons Attribution-ShareAlike
+ 4.0 International License. To view a copy of this license, visit
+ \href{http://creativecommons.org/licenses/by-sa/4.0/}{http://creativecommons.org/licenses/by-sa/4.0/}
+or send a letter to Creative Commons, PO Box 1866, Mountain View, CA 94042,
+USA.}
 
 \end{document}
