--- a/PietroPrandini_FondamentiElettronica_FirstSPICEExercise.tex
+++ b/PietroPrandini_FondamentiElettronica_FirstSPICEExercise.tex
@@ -86,8 +86,9 @@ K = C_2R_2 \cdot \left(1+\frac{R_4}{R_3}\right)
  K|_{dB} = 20\log_{10}|K| = \log_{10}\left|C_2R_2 \cdot \left(1+\frac{R_4}{R_3}\right)\right| = -19.1722 dB
 \end{equation}
 
-\begin{equation} \label{eq:omega_1dB}
-\omega_1|_{dB} = \log_{10} |\omega_1| = \log_{10} \left| \frac{1}{C_2R_2} \right|= 2.0000
+\begin{equation} \label{eq:omega_1log}
+\log_{10} |\omega_1| =
+\log_{10} \left| \frac{1}{C_2R_2} \right|= 2.0000
 \end{equation}
 
 \subsubsection{Bode diagram}
