--- a/PietroPrandini_FondamentiElettronica_FirstSPICEExercise.tex
+++ b/PietroPrandini_FondamentiElettronica_FirstSPICEExercise.tex
@@ -289,6 +289,35 @@ C_2 = 9.10953pF\\
   \label{2d3graph}
 \end{figure}
 
+\subsection{Output voltage}
+\subsubsection{$Vin$ frequency $10Hz$ $100Hz$}
+\lstinputlisting{netlist/2d4a.cir}
 
+\begin{figure}[H]
+  \centering
+  \includegraphics[width=14cm]{graph/2d4a.jpg}
+  \caption{Band pass amplifier - Bode plot - $Vin$ frequency $10Hz$ $100Hz$}
+  \label{2d4agraph}
+\end{figure}
+
+\subsubsection{$Vin$ frequency $1kHz$ $10kHz$ $100kHz$}
+\lstinputlisting{netlist/2d4b.cir}
+
+\begin{figure}[H]
+  \centering
+  \includegraphics[width=14cm]{graph/2d4b.jpg}
+  \caption{Band pass amplifier - Bode plot - $Vin$ frequency $1kHz$ $10kHz$ $100kHz$}
+  \label{2d4bgraph}
+\end{figure}
+
+\subsubsection{$Vin$ frequency $1MEGHz$ $10MEGHz$ $100MEGHz$}
+\lstinputlisting{netlist/2d4c.cir}
+
+\begin{figure}[H]
+  \centering
+  \includegraphics[width=14cm]{graph/2d4c.jpg}
+  \caption{Band pass amplifier - Bode plot - $Vin$ frequency $1MEGHz$ $10MEGHz$ $100MEGHz$}
+  \label{2d4cgraph}
+\end{figure}
 
 \end{document}
