--- a/PietroPrandini_FondamentiElettronica_FirstSPICEExercise.tex
+++ b/PietroPrandini_FondamentiElettronica_FirstSPICEExercise.tex
@@ -356,7 +356,8 @@ Conditions:
   \left\{
     \begin{array}{l}
       R_2 = \frac{1097752}{20}\Omega \\
-      \frac{R_2}{R_1} = 20
+      V_{ref} = 15V \\
+      \frac{R_2}{R_1}V_{ref} = 20
     \end{array}
   \right.
 \end{equation}
@@ -364,8 +365,9 @@ Conditions:
 \begin{equation} \label{eq:R2R1_3}
   \left\{
     \begin{array}{l}
-      R_1 = 2.74438k\Omega \\
-      R_2 = 54.88760k\Omega
+      R_1 = 41.16570k\Omega \\
+      R_2 = 54.88760k\Omega \\
+      V_{ref} = 15V
     \end{array}
   \right.
 \end{equation}
